--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 # NetBeans specific
-nbproject/private/
-nbproject/Makefile-*.mk
-nbproject/Package-*.bash
-nbproject/build-impl.xml
-nbproject/genfiles.properties
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
 build/
 nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-nbactions.xml
-nb-configuration.xml
 
 # Tomcat
 server/
