--- a/Orchestrator/nbproject/project.properties
+++ b/Orchestrator/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.gson-2.11.0.jar=lib\\gson-2.11.0.jar
+file.reference.sqlite-jdbc-3.47.0.0.jar=lib\\sqlite-jdbc-3.47.0.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +39,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+    ${libs.restlib.classpath}:\
+    ${file.reference.gson-2.11.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.47.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
