--- a/Orchestrator/nbproject/project.properties
+++ b/Orchestrator/nbproject/project.properties
@@ -43,7 +43,7 @@ javac.classpath=\
     ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.sqlite-jdbc-3.47.0.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:deprecation
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
