--- a/Orchestrator/nbproject/project.properties
+++ b/Orchestrator/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.gson-2.11.0.jar=lib\\gson-2.11.0.jar
-file.reference.sqlite-jdbc-3.47.0.0.jar=lib\\sqlite-jdbc-3.47.0.0.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar=lib\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +41,7 @@ javac.classpath=\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
     ${file.reference.gson-2.11.0.jar}:\
-    ${file.reference.sqlite-jdbc-3.47.0.0.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation
 javac.debug=true
